refactor: :art: Criacao da pasta dist
Passagem da compilacao do typescript da pasta src/js para dist/
